<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.adaptersample.ActivityInputContact" >

    <EditText
        android:id="@+id/etVN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/sVorname" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etNN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etVN"
        android:layout_below="@+id/etVN"
        android:ems="10"
        android:hint="@string/sNachname" />

    <EditText
        android:id="@+id/etTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etNN"
        android:layout_below="@+id/etNN"
        android:ems="10"
        android:hint="@string/sTelefon"
        android:inputType="number" />

    <Button
        android:id="@+id/btSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etTN"
        android:layout_centerVertical="true"
        android:text="@string/sSpeichern" />

    <Button
        android:id="@+id/btBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/etTN"
        android:layout_centerVertical="true"
        android:text="@string/sBack" />

</RelativeLayout>
